[gd_scene load_steps=2 format=3 uid="uid://hos1wawl1u68"]

[ext_resource type="Script" path="res://screens/landing/missions_window.gd" id="1_m0je2"]

[node name="MissionsWindow" type="Window" node_paths=PackedStringArray("mission_list", "cost_label", "reward_label", "start_button")]
title = "Mission Computer"
initial_position = 1
size = Vector2i(600, 300)
transient = true
script = ExtResource("1_m0je2")
mission_list = NodePath("PanelContainer/HSplitContainer/Missions/ItemList")
cost_label = NodePath("PanelContainer/HSplitContainer/MarginContainer/VBoxContainer/CostLabel")
reward_label = NodePath("PanelContainer/HSplitContainer/MarginContainer/VBoxContainer/RewardLabel")
start_button = NodePath("PanelContainer/HSplitContainer/MarginContainer/VBoxContainer/StartButton")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Missions" type="ScrollContainer" parent="PanelContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
follow_focus = true

[node name="ItemList" type="ItemList" parent="PanelContainer/HSplitContainer/Missions"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
auto_height = true
item_count = 2
item_0/text = "Delivery to 123"
item_1/text = "Delivery to Gaia Prime"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HSplitContainer"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HSplitContainer/MarginContainer"]
layout_mode = 2

[node name="CostHeading" type="Label" parent="PanelContainer/HSplitContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cost"
uppercase = true

[node name="CostLabel" type="Label" parent="PanelContainer/HSplitContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "1235 "
horizontal_alignment = 2

[node name="RewardHeading" type="Label" parent="PanelContainer/HSplitContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Reward"
uppercase = true

[node name="RewardLabel" type="Label" parent="PanelContainer/HSplitContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "123 credits 1241"
horizontal_alignment = 2

[node name="StartButton" type="Button" parent="PanelContainer/HSplitContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "START"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="empty_clicked" from="PanelContainer/HSplitContainer/Missions/ItemList" to="." method="_on_empty_clicked"]
[connection signal="multi_selected" from="PanelContainer/HSplitContainer/Missions/ItemList" to="." method="_on_multi_selected"]
[connection signal="pressed" from="PanelContainer/HSplitContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_pressed"]
